Fix crash when checking if a channel is visible

Documentation states that if channelFlags is empty, then all channels are considered active.

BUG:403436